# cgif

./: .gitignore  CMakeLists.txt  Makefile  core.c  core.h  gif.c  gif.h  hashmap  hashmap.c  hashmap.h  lzw.txt  main  main.c  mem.c  mem.h  perf.data  perf.data.old  procon.md  test.c  woman_out.txt
examples/: main.c
include/gifbuf/: gifbuf.h
src/: core.c  core.h  gifbuf.c
test/: test.c
test-images/: cat16.h  cat256.h  cat64.h
test/test-images/: cat16.h  cat256.h  cat64.h  test.h  woman256.h
tools/: profile.sh
